
--Added proper descriptions to the Engines and Gearboxes

*r02
Engines :

--Changed the existing engines to diesels, with corresponding sound

--Slightly upped the weight of both the 1.2l-i4 and 2l-i4

--Changes to the ideal RPM range of both the 1.2l-i4 and 2l-i4 : 
     12l : From 8000-10000RPM to 2000-4000RPM
     2l : From 5000-7000RPM to 1800-3500RPM
	 
--Increased the max torque of the 2l-i4 from 150n/m to 200n/m

--Lowered the max torque of the 15l-i4 from 5000n/m to 1800n/m

*r03
Guns : 

--Reduced HE explosive power 25%

--Reduced mortar accuracy by half, and increased reload time by 50%

Engines : 

--Fixed a bug that made the engines apply twice as much power as their rated output to the wheels

*r04
Engines : 

--Added Dual-Clutch gearboxes, that will allow you to use tank-like steering with only one gearbox

*r05
Engines : 

--Added V8 lineup
--Increased engine volume

*r06
Engines : 
-- Tuned the suck out of the 6.5L V8

Gearboxes :
-- Added 6 speed lineup

*r07
Engines : 
-- Added 3.5 & 8.7L diesel v8s, be sure to update your client

*r07
Engines : 
-- Removed 3.5, 6.5, and 8.7L engines in favor of 9L petrol v8, inline 4/6 on their way to fill the gaps

*r08
Guns : 
-- Added all new sounds for guns, soundscripting for them as well so they are audible at range
Engines:
-- Added soundscripts and changed engine sounds accordingly

*r09
Guns : 
-- HE occlusion issues are now fixed

*r10
Guns :
--Ammocrate armour is now calculated differently, only takeing the weight of the empty crate, without the ammo, into account.

--Ammo detonations occur differently, they are now based on the damage dealed to the crate compared to the size of the rounds in that crate. This makes it more difficult to detonate big rounds with MGs or rounds that just barely penetrated armour

Interface :
--Changelog now appears upon selection of the ACF Menu

--Changelog revisions are now properly sorted

*r11
Gearboxes : 
-- Added 4 & 6 speed inline gearboxes

